--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
-<html>
-  <head>
-  
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uruguay</title>
     <link rel="stylesheet" href="styles.css">
-  </head>
-  
-  <body>
+</head>
+<body>
     <div class="container">
-      <div class="band">
-        <table>
-          <tr><td></td></tr>
-          <tr><td></td></tr>
-          <tr><td></td></tr>
-          <tr><td></td></tr>
-          <tr><td></td></tr>
-          <tr><td></td></tr>
-          <tr><td></td></tr>
-          <tr><td></td></tr>
-          
-        </table>
-        <div class="box"></div>
-        <div class="sol"> <p>🌞</p></div>
+        <div class="band">
+          <table>
+            <tr><td></td></tr>
+            <tr><td></td></tr>
+            <tr><td></td></tr>
+            <tr><td></td></tr>
+            <tr><td></td></tr>
+            <tr><td></td></tr>
+            <tr><td></td></tr>
+            <tr><td></td></tr>
+            <tr><td></td></tr>
+            
+          </table>
+          <div class="box"></div>
+          <div class="sol"> <p>🌞</p></div>
+        </div>
       </div>
-    </div>
-  </body>
+</body>
 </html>
